# braintercourse

./: .gitignore  CMakeLists.txt  README.md  braintercourse.c  braintercourse.h  config.h  renderer.c  renderer.h
include/: interpreter.h  renderer.h  renderer_config.h
src/: example.cpp  interpreter.c  raygui_impl.c  renderer.c
